@@ -1,5 +1,6 @@
 software-center (3.1.23.2) UNRELEASED; urgency=low
 
+  [ Michael Vogt]
   * merged lp:~mmcg069/software-center/little-catview-cleanups
   * merged lp:~mmcg069/software-center/stars-visual-tweaks 
   * softwarecenter/db/database.py, test/test_appstore.py:
@@ -8,6 +9,10 @@ software-center (3.1.23.2) UNRELEASED; urgency=low
   * softwarecenter/db/reviews.py:
     - fix support for reviews in not enabled PPAs (like for-pay PPAs)
       LP: #731376
+
+  [ Kiwinote ]
+  * softwarecenter/view/softwarepane.py:
+    - revert to correct sortmode once searchterm has been cleared
   
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 08 Mar 2011 09:15:22 +0100
 
